<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="@color/pink">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="20sp" android:text="@string/login"
            android:backgroundTint="@color/black" />
    </androidx.appcompat.widget.Toolbar>

    <EditText android:id="@+id/username" android:layout_width="350dp"
        android:layout_height="wrap_content" android:textSize="20sp"
        android:autofillHints="username" android:hint="@string/username" android:inputType="text"
        android:layout_gravity="center" />

    <EditText android:id="@+id/password" android:layout_width="350dp"
        android:layout_height="wrap_content" android:textSize="20sp"
        android:autofillHints="password" android:hint="@string/password"
        android:inputType="textPassword" android:layout_gravity="center" />

    <Button android:id="@+id/loginBtn" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/loginBtn"
        android:layout_marginEnd="50dp" android:layout_gravity="end"
        android:backgroundTint="@color/pink" android:textColor="@color/black" />

    <TextView android:id="@+id/errorMsg" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="20dp"
        android:textSize="20sp" />

    <TextView android:id="@+id/errorDesc" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="20dp"
        android:textSize="20sp" />

</LinearLayout>