<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="@color/pink">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="20sp" android:text="@string/product"
            android:backgroundTint="@color/black" />
    </androidx.appcompat.widget.Toolbar>

    <EditText android:id="@+id/product_name" android:layout_width="350dp"
        android:layout_height="wrap_content" android:textSize="20sp"
        android:importantForAutofill="no" android:hint="@string/product_name" android:inputType="text" android:layout_gravity="center" />

    <EditText android:id="@+id/product_stock" android:layout_width="350dp"
        android:layout_height="wrap_content" android:textSize="20sp"
        android:importantForAutofill="no" android:hint="@string/product_stock" android:inputType="text" android:layout_gravity="center" />

    <EditText android:id="@+id/product_price" android:layout_width="350dp"
        android:layout_height="wrap_content" android:textSize="20sp"
        android:importantForAutofill="no" android:hint="@string/product_price"
        android:inputType="text" android:layout_gravity="center" />

    <Button android:id="@+id/saveBtn" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/saveBtn"
        android:layout_marginEnd="50dp" android:layout_gravity="end"
        android:backgroundTint="@color/pink" android:textColor="@color/black" />

    <TextView android:id="@+id/inputErrorMsg" android:layout_width="350dp"
        android:layout_height="wrap_content" android:layout_gravity="center"
        android:layout_margin="20dp" />

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">

        <LinearLayout android:layout_width="350dp" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="center">

            <TextView android:id="@+id/product_name_tv" android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1" />

            <TextView android:id="@+id/product_stock_tv" android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1" />

            <TextView android:id="@+id/product_price_tv" android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>